--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "generate-semver",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Create a release",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build -o dist index.js"
+    "build": "ncc build -o dist index.js",
+    "test": "node --test test.js"
   },
   "repository": {
     "type": "git",
@@ -17,21 +18,12 @@
   "author": "Enosix",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.9.1",
-    "semver": "^6.3.1",
-    "@actions/github": "^4.0.0"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "semver": "^7.6.2"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.20.4",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.8.0",
-    "prettier": "^1.16.4",
-    "husky": "^3.0.5"
+    "@vercel/ncc": "^0.38.1",
+    "dotenv": "^16.4.5"
   }
 }
