--- a/test-pr.env
+++ b/test-pr.env
@@ -4,4 +4,4 @@ INPUT_PRERELEASE_VERSION="pr123"
 INPUT_DRY_RUN="true"
 DUMMY_REFS="1.0.0,2.0.0,2.1.0,2.2.0,2.2.1"
 DUMMY_BRANCH="prod-123456789-test"
-CI="false"
+TEST="true"
