--- a/test-release.env
+++ b/test-release.env
@@ -4,4 +4,4 @@ INPUT_PRERELEASE_VERSION=""
 INPUT_DRY_RUN="true"
 DUMMY_REFS="1.0.0,2.0.0,2.1.0,2.2.0,2.2.1"
 DUMMY_BRANCH="release/2-2"
-CI="false"
+TEST="true"
